# coce_repo

./: .coveragerc  .env.example  .gitignore  AGENTS.md  AUDIT.md  Dockerfile  PROJECT_BIBLE.md  README.md  pyproject.toml
config/: base.yaml  sleeve.yaml
data/: pump_events.csv
infra/: Dockerfile  ci.yml
sim/: backtest_alpha.py  execution_sim.py  label_pumps.py
src/: __init__.py
src/agent/: __init__.py  convex_controller.py  meta_controller.py  run_agent.py
src/alpha/: __init__.py  arima_filter.py  features.py  model.py  trainer.py
src/data_ingest/: price_loader.py  social_scraper.py  volume_anomaly.py
src/execution/: ccxt_router.py  slippage.py  trade_manager.py
src/infra/: __init__.py  alert.py  secret_provider.py
src/network_analysis/: __init__.py  clustering.py  consensus.py  corr_matrix.py  graph_builder.py
src/options/: deribit_router.py  position_manager.py  (+1 more)
tests/: conftest.py  test_alert.py  test_alpha.py  test_autolabel.py  test_ccxt_router.py  test_config_validation.py  test_config_validation_module.py  test_consensus.py  test_convex_budget.py  test_convex_controller.py  test_corr_spike.py  test_depth_limit.py  test_hrp.py  test_liquidity.py  test_logging.py  test_meta.py  test_module_coverage.py  test_options_router.py  test_persistence.py  test_position_manager.py  test_price_loader.py  test_pump_model.py  test_risk.py  test_screener.py  test_secret_provider.py  test_sentiment_filter.py  test_state.py  test_stop_loss.py  test_supply.py  test_trade_pass_path.py  test_turnover.py  test_turnover_limiter.py  test_var.py  test_volume_gate.py
(+15 files in other folders)
